finished left side of page, created three rows on right side. Finished top and bottom divs, about to start on the middle form

--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
   <link href="style.css" rel="stylesheet">
 </head>
 <body>
-  
+  <div id="img-logo-container">
+    <img src="josh-hild-_TuI8tZHlk4-unsplash.jpeg" alt="Image of snowy street view" id="winter-img">
+
+    <div id="logo-container">
+      <label id="odin"><img src="odin-lined.png" alt="The Odin Project logo" id="odin-logo-image">ODIN</label>
+    </div>
+
+    <div id="image-credit">Photo by <a href="https://unsplash.com/@joshhild?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Josh Hild</a> on <a href="https://unsplash.com/s/photos/winter?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></div>
+  </div>
+
+  <div id="right-container">
+    <div id="top-div">
+      <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p>
+      <p>You <em>know</em> you want to.</p>
+    </div>
+    <div id="middle-div">
+      <form action="" method="get" id="signup-form">
+        <h1>Let's do this!</h1>
+      </form>
+    </div>
+    <div id="bottom-div">
+      <button type="submit">Create Account</button>
+      <p>Already have an account? <strong>Log in</strong></p>
+    </div>
+  </div>
 </body>
 </html>
