Added three form inputs/labels

--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
       <p>You <em>know</em> you want to.</p>
     </div>
     <div id="middle-div">
+      <h1>Let's do this!</h1>
       <form action="" method="get" id="signup-form">
-        <h1>Let's do this!</h1>
+        <label>First Name<br><input type="text" id="firstname" name="firstname"></label>
+        <label>Last Name<br><input type="text" id="lastname" name="lastname"></label>
+        <label>Email<br><input type="email" id="email" name="email"></label>
       </form>
     </div>
     <div id="bottom-div">
